syntax = "proto3";

package semio.server.v1;

import "model.proto";

service Server{
    rpc LayoutDesign(semio.model.v1.Layout) returns (semio.model.v1.Design);
}

message LayoutDesignRequest{
    semio.model.v1.Layout layout = 1;
    string target_type = 2;
}